--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,7 +22,10 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Copy .env.example
         run: cp .env.example .env
-      - run: yarn build
+      - name: Lint
+        run: yarn lint
+      - name: Build
+        run: yarn build
         # run 3 copies of the current job in parallel
       - name: Run split Cypress tests 🧪
         uses: cypress-io/github-action@v5
