fix: lint actions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "serve": "vite preview",
     "build": "vite build --mode production",
-    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore --fix src",
+    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore src",
+    "lint:fix": "yarn lint --fix",
     "commit": "cz",
     "build:watch": "vite build --watch",
     "build:watch:dev": "vite build --watch --mode development --minify false",
