--- a/package.json
+++ b/package.json
@@ -21,53 +21,53 @@
     "launchdarkly-js-client-sdk": "2.24.2"
   },
   "dependencies": {
-    "@kong-ui-public/copy-uuid": "^0.3.15",
-    "@kong-ui-public/document-viewer": "^0.8.0",
-    "@kong-ui-public/spec-renderer": "^0.9.0",
+    "@kong-ui-public/copy-uuid": "0.3.15",
+    "@kong-ui-public/document-viewer": "0.8.0",
+    "@kong-ui-public/spec-renderer": "0.9.0",
     "@kong/kong-auth-elements": "2.0.3",
     "@kong/kongponents": "8.73.1",
     "@kong/sdk-portal-js": "0.0.1-beta.20",
-    "@xstate/vue": "^2.0.0",
-    "autoprefixer": "^10.4.14",
+    "@xstate/vue": "2.0.0",
+    "autoprefixer": "10.4.14",
     "axios": "0.27.2",
     "date-fns": "2.30.0",
     "js-yaml": "4.1.0",
-    "pinia": "^2.1.3",
-    "vite": "^4.3",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.1",
+    "pinia": "2.1.3",
+    "vite": "4.3",
+    "vue": "3.3.4",
+    "vue-router": "4.2.1",
     "xstate": "4.37.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
+    "@commitlint/cli": "17.6.3",
+    "@commitlint/config-conventional": "17.6.3",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/compiler-sfc": "^3.3.4",
+    "@vitejs/plugin-vue": "4.2.3",
+    "@vitejs/plugin-vue-jsx": "3.0.1",
+    "@vue/compiler-sfc": "3.3.4",
     "@vue/eslint-config-standard": "8.0.1",
     "@vue/eslint-config-typescript": "11.0.3",
-    "commitizen": "^4.3.0",
+    "commitizen": "4.3.0",
     "concurrently": "7.6.0",
     "cypress": "12.13.0",
-    "cypress-split": "^1.3.8",
+    "cypress-split": "1.3.8",
     "cypress-terminal-report": "4.1.3",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.42.0",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.42.0",
     "eslint-plugin-cypress": "2.13.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-portal-vue": "file:./eslint-plugin-portal-vue",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-standard": "5.0.0",
-    "eslint-plugin-vue": "^9.14.1",
-    "express": "^4.18.2",
-    "lefthook": "^1.4.1",
+    "eslint-plugin-vue": "9.14.1",
+    "express": "4.18.2",
+    "lefthook": "1.4.1",
     "sass": "1.62.1",
     "tailwindcss": "3.3.2",
     "typescript": "4.9.5",
-    "vite-svg-loader": "^4.0.0"
+    "vite-svg-loader": "4.0.0"
   },
   "config": {
     "commitizen": {
