--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build:watch:dev": "vite build --watch --mode development --minify false",
     "test": "yarn lint && yarn test:e2e",
     "test:e2e": "concurrently --kill-others \"yarn build:watch\" \"cypress open -C cypress.config.js --e2e -b chrome\" \"node cypress.server.mjs \"",
-    "test:e2e:ci": "concurrently --success first --kill-others  \"yarn build && DEBUG=cypress:server cypress run -C cypress.config.js --e2e -b chrome\" \"node cypress.server.mjs \""
+    "test:e2e:ci": "concurrently --success first --kill-others  \"yarn build && DEBUG=cypress:server cypress run -C cypress.config.js --e2e -b chrome\" \"node cypress.server.mjs \"",
+    "typecheck": "vue-tsc -p './tsconfig.json' --noEmit",
+    "typecheck:tests": "vue-tsc -p './cypress/e2e/tsconfig.json' --noEmit"
   },
   "optionalDependencies": {
     "launchdarkly-js-client-sdk": "2.24.2"
@@ -36,6 +38,7 @@
     "vite": "4.3",
     "vue": "3.3.4",
     "vue-router": "4.2.1",
+    "vue-tsc": "1.6.5",
     "xstate": "4.37.2"
   },
   "devDependencies": {
@@ -64,6 +67,7 @@
     "eslint-plugin-vue": "9.14.1",
     "express": "4.18.2",
     "lefthook": "1.4.1",
+    "openapi-types": "12.1.3",
     "sass": "1.62.1",
     "tailwindcss": "3.3.2",
     "typescript": "4.9.5",
