--- a/package.json
+++ b/package.json
@@ -30,15 +30,12 @@
     "@kong/kongponents": "8.73.1",
     "@kong/sdk-portal-js": "0.0.1-beta.23",
     "@xstate/vue": "2.0.0",
-    "autoprefixer": "10.4.14",
     "axios": "0.27.2",
     "date-fns": "2.30.0",
     "js-yaml": "4.1.0",
     "pinia": "2.1.3",
-    "vite": "4.3",
     "vue": "3.3.4",
     "vue-router": "4.2.1",
-    "vue-tsc": "1.6.5",
     "xstate": "4.37.2"
   },
   "devDependencies": {
@@ -51,6 +48,7 @@
     "@vue/compiler-sfc": "3.3.4",
     "@vue/eslint-config-standard": "8.0.1",
     "@vue/eslint-config-typescript": "11.0.3",
+    "autoprefixer": "10.4.14",
     "commitizen": "4.3.0",
     "concurrently": "7.6.0",
     "cypress": "12.13.0",
@@ -71,7 +69,9 @@
     "sass": "1.62.1",
     "tailwindcss": "3.3.2",
     "typescript": "4.9.5",
-    "vite-svg-loader": "4.0.0"
+    "vite-svg-loader": "4.0.0",
+    "vite": "4.3",
+    "vue-tsc": "1.6.5"
   },
   "config": {
     "commitizen": {
