--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build:watch:dev": "vite build --watch --mode development --minify false",
     "test": "yarn lint && yarn test:e2e",
     "test:e2e": "concurrently --kill-others \"yarn build:watch\" \"cypress open -C cypress.config.js --e2e -b chrome\" \"node cypress.server.mjs \"",
-    "test:e2e:ci": "concurrently --success first --kill-others  \"yarn build && DEBUG=cypress:server cypress run -C cypress.config.js --e2e -b chrome\" \"node cypress.server.mjs \""
+    "test:e2e:ci": "concurrently --success first --kill-others  \"yarn build && DEBUG=cypress:server cypress run -C cypress.config.js --e2e -b chrome\" \"node cypress.server.mjs \"",
+    "typecheck": "vue-tsc -p './tsconfig.json' --noEmit",
+    "typecheck:tests": "vue-tsc -p './cypress/e2e/tsconfig.json' --noEmit"
   },
   "optionalDependencies": {
     "launchdarkly-js-client-sdk": "2.24.2"
@@ -24,16 +26,14 @@
     "@kong-ui-public/copy-uuid": "0.3.15",
     "@kong-ui-public/document-viewer": "0.8.0",
     "@kong-ui-public/spec-renderer": "0.9.0",
-    "@kong/kong-auth-elements": "2.0.3",
+    "@kong/kong-auth-elements": "2.0.4",
     "@kong/kongponents": "8.73.1",
-    "@kong/sdk-portal-js": "0.0.1-beta.20",
+    "@kong/sdk-portal-js": "0.0.1-beta.23",
     "@xstate/vue": "2.0.0",
-    "autoprefixer": "10.4.14",
     "axios": "0.27.2",
     "date-fns": "2.30.0",
     "js-yaml": "4.1.0",
     "pinia": "2.1.3",
-    "vite": "4.3",
     "vue": "3.3.4",
     "vue-router": "4.2.1",
     "xstate": "4.37.2"
@@ -48,6 +48,7 @@
     "@vue/compiler-sfc": "3.3.4",
     "@vue/eslint-config-standard": "8.0.1",
     "@vue/eslint-config-typescript": "11.0.3",
+    "autoprefixer": "10.4.14",
     "commitizen": "4.3.0",
     "concurrently": "8.1.0",
     "cypress": "12.13.0",
@@ -64,10 +65,13 @@
     "eslint-plugin-vue": "9.14.1",
     "express": "4.18.2",
     "lefthook": "1.4.1",
+    "openapi-types": "12.1.3",
     "sass": "1.62.1",
     "tailwindcss": "3.3.2",
     "typescript": "4.9.5",
-    "vite-svg-loader": "4.0.0"
+    "vite-svg-loader": "4.0.0",
+    "vite": "4.3",
+    "vue-tsc": "1.6.5"
   },
   "config": {
     "commitizen": {
