--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # URL for portal api
-VITE_PORTAL_API_URL='https://konginc32d5158c.eu.portal.konghq.com/'
+VITE_PORTAL_API_URL='https://konnect-portal.svenwal.eu'
 
 # Sets the localization, defaults to 'en' if unset
 VITE_LOCALE='en'
