Moved to final domain

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # URL for portal api
-VITE_PORTAL_API_URL='https://konnect-portal.svenwal.eu'
+VITE_PORTAL_API_URL='https://axa-us-saas.dev-portal.de'
 
 # Sets the localization, defaults to 'en' if unset
 VITE_LOCALE='en'
