--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "serve": "vite preview",
     "build": "vite build --mode production",
+    "build:analyze": "BUILD_VISUALIZER=true vite build --mode production",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore src",
     "lint:fix": "yarn lint --fix",
     "commit": "cz",
@@ -66,11 +67,12 @@
     "express": "4.18.2",
     "lefthook": "1.4.1",
     "openapi-types": "12.1.3",
+    "rollup-plugin-visualizer": "5.9.2",
     "sass": "1.63.4",
     "tailwindcss": "3.3.2",
     "typescript": "4.9.5",
-    "vite-svg-loader": "4.0.0",
     "vite": "4.4",
+    "vite-svg-loader": "4.0.0",
     "vue-tsc": "1.6.5"
   },
   "config": {
