--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@xstate/vue": "2.0.0",
     "axios": "0.27.2",
     "date-fns": "2.30.0",
+    "dotenv": "16.3.1",
     "js-yaml": "4.1.0",
     "pinia": "2.1.3",
     "vue": "3.3.4",
