--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
+          cache: 'yarn'
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       - name: Lint
@@ -31,6 +32,7 @@ jobs:
         run: yarn typecheck
   tests:
     name: Tests
+    needs: code-quality
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -42,6 +44,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
+          cache: 'yarn'
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Copy .env.example
