--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:e2e": "concurrently --kill-others \"yarn build:watch\" \"cypress open -C cypress.config.js --e2e -b chrome\" \"node cypress.server.mjs \"",
     "test:e2e:ci": "concurrently --success first --kill-others  \"yarn build && DEBUG=cypress:server cypress run -C cypress.config.js --e2e -b chrome\" \"node cypress.server.mjs \"",
     "typecheck": "vue-tsc -p './tsconfig.json' --noEmit",
-    "typecheck:tests": "vue-tsc -p './cypress/e2e/tsconfig.json' --noEmit"
+    "typecheck:tests": "vue-tsc -p './cypress/e2e/tsconfig.json' --noEmit",
+    "semantic-release": "semantic-release"
   },
   "optionalDependencies": {
     "launchdarkly-js-client-sdk": "3.1.3"
@@ -43,6 +44,8 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.3",
     "@commitlint/config-conventional": "17.6.5",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/git": "10.0.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.61.0",
     "@vitejs/plugin-vue": "4.2.3",
@@ -70,6 +73,7 @@
     "openapi-types": "12.1.3",
     "rollup-plugin-visualizer": "5.9.2",
     "sass": "1.63.4",
+    "semantic-release": "21.0.7",
     "tailwindcss": "3.3.2",
     "typescript": "4.9.5",
     "vite": "4.4",
@@ -94,5 +98,9 @@
   "volta": {
     "node": "16.19.0",
     "yarn": "1.22.17"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Kong/konnect-portal.git"
   }
 }
