--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -32,6 +32,7 @@ jobs:
   tests:
     name: Tests
     runs-on: ubuntu-latest
+    needs: code-quality
     strategy:
       fail-fast: false
       matrix:
