--- a/.github/workflows/merge-to-release.yml
+++ b/.github/workflows/merge-to-release.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Override release branch with changes from release tag
         shell: bash
         env:
-          GH_TOKEN: ${{ secrets.GHA_TEAM_DEVX_KONG_BOT_PAT }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.email "team-devx+github-bot@konghq.com"
           git config --global user.name "team-devx"
