--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,5 +18,5 @@ jobs:
         run: npm ci
       - name: Semantic Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GHA_TEAM_DEVX_KONG_BOT_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
