--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
           node-version-file: '.nvmrc'
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+      - name: Copy .env.example
+        run: cp .env.example .env
       - name: Build
         run: yarn build
       - name: Semantic Release
