--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "@kong/sdk-portal-js": "1.0.0",
     "@xstate/vue": "2.0.0",
     "axios": "0.27.2",
+    "chart.js": "^4.3.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "2.30.0",
     "js-yaml": "4.1.0",
     "pinia": "2.1.3",
     "vue": "3.3.4",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "4.2.1",
     "xstate": "4.38.0"
   },
