--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@kong-ui-public/analytics-chart": "0.3.1",
+    "@kong-ui-public/analytics-metric-provider": "1.1.14",
     "@kong-ui-public/analytics-utilities": "0.4.3",
     "@kong-ui-public/copy-uuid": "1.1.5",
     "@kong-ui-public/document-viewer": "0.10.5",
@@ -39,7 +40,6 @@
     "dotenv": "16.3.1",
     "js-yaml": "4.1.0",
     "pinia": "2.1.3",
-    "swrv": "1.0.4",
     "vue": "3.3.4",
     "vue-router": "4.2.1",
     "xstate": "4.38.0"
