--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "launchdarkly-js-client-sdk": "3.1.3"
   },
   "dependencies": {
+    "@kong-ui-public/analytics-chart": "0.8.25",
+    "@kong-ui-public/analytics-metric-provider": "1.1.17",
+    "@kong-ui-public/analytics-utilities": "0.5.3",
     "@kong-ui-public/copy-uuid": "1.1.5",
     "@kong-ui-public/document-viewer": "0.10.5",
     "@kong-ui-public/spec-renderer": "0.11.6",
@@ -60,6 +63,7 @@
     "cypress-split": "1.3.8",
     "cypress-terminal-report": "5.3.2",
     "cz-conventional-changelog": "3.3.0",
+    "druid.d.ts": "0.12.2",
     "eslint": "8.46.0",
     "eslint-plugin-cypress": "2.13.3",
     "eslint-plugin-import": "2.28.0",
