--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build:analyze": "BUILD_VISUALIZER=true vite build --mode production",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore src",
     "lint:fix": "yarn lint --fix",
+    "stylelint": "stylelint --allow-empty-input './src/**/*.{css,scss,sass,less,styl,vue}'",
+    "stylelint:fix": "yarn stylelint --fix",
     "commit": "cz",
     "build:watch": "vite build --watch",
     "build:watch:dev": "vite build --watch --mode development --minify false",
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@commitlint/cli": "17.7.1",
     "@commitlint/config-conventional": "17.7.0",
+    "@kong/design-tokens": "^1.9.1",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
@@ -75,9 +78,15 @@
     "express": "4.18.2",
     "lefthook": "1.4.1",
     "openapi-types": "12.1.3",
+    "postcss-html": "^1.5.0",
     "rollup-plugin-visualizer": "5.9.2",
     "sass": "1.66.1",
     "semantic-release": "21.1.1",
+    "stylelint": "^15.10.3",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recommended-scss": "^13.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-order": "^6.0.3",
     "tailwindcss": "3.3.2",
     "typescript": "4.9.5",
     "vite": "4.4",
