--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@kong/kong-auth-elements": "2.8.0",
     "@kong/kongponents": "8.123.3",
     "@kong/sdk-portal-js": "2.1.0",
+    "@kong/sdk-portal-js-dev": "0.0.3",
     "@xstate/vue": "2.0.0",
     "axios": "0.27.2",
     "date-fns": "2.30.0",
