--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "autoprefixer": "10.4.14",
     "commitizen": "4.3.0",
     "concurrently": "8.2.0",
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "cypress": "13.5.0",
     "cypress-split": "1.15.4",
     "cypress-terminal-report": "5.3.2",
