--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "devDependencies": {
     "@commitlint/cli": "18.4.1",
     "@commitlint/config-conventional": "18.4.0",
-    "@kong/design-tokens": "^1.11.10",
+    "@kong/design-tokens": "1.11.10",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
