--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@kong-ui-public/document-viewer": "2.0.7",
     "@kong-ui-public/spec-renderer": "0.13.4",
     "@kong/kong-auth-elements": "2.11.1",
-    "@kong/kongponents": "8.127.0",
+    "@kong/kongponents": "9.0.0-pr.1881.bc9972cc.0",
     "@kong/sdk-portal-js": "2.5.0",
     "@xstate/vue": "2.0.0",
     "axios": "1.6.0",
