chore(updates): trying packages versions with common ancestor

--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   },
   "dependencies": {
     "@kong-ui-public/analytics-chart": "1.3.6",
-    "@kong-ui-public/analytics-metric-provider": "2.0.40",
+    "@kong-ui-public/analytics-metric-provider": "3.0.0",
     "@kong-ui-public/analytics-utilities": "0.15.0",
-    "@kong-ui-public/copy-uuid": "1.1.5",
+    "@kong-ui-public/copy-uuid": "2.0.37",
     "@kong-ui-public/document-viewer": "2.0.16",
-    "@kong-ui-public/spec-renderer": "0.13.5",
+    "@kong-ui-public/spec-renderer": "2.0.46",
     "@kong/kong-auth-elements": "2.11.1",
-    "@kong/kongponents": "8.127.0",
+    "@kong/kongponents": "9.0.0-alpha.101",
     "@kong/sdk-portal-js": "2.9.0",
     "@xstate/vue": "2.0.0",
     "axios": "1.6.0",
