--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,5 +8,9 @@ updates:
     commit-message:
       prefix: chore(deps)
     ignore:
-    - dependency-name: "*"
-      update-types: ["version-update:semver-patch"]
+      - dependency-name: "@kong/kongponents"
+      - dependency-name: "@kong-ui-public/analytics-chart"
+      - dependency-name: "@kong-ui-public/analytics-metric-provider"
+      - dependency-name: "@kong-ui-public/analytics-utilities"
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
