--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "3.3.0",
     "dotenv": "16.4.1",
     "js-yaml": "4.1.0",
+    "lefthook": "^1.6.5",
     "pinia": "2.1.3",
     "vue": "3.4.21",
     "vue-router": "4.3.0",
