--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@kong-ui-public/analytics-utilities": "0.10.1",
     "@kong-ui-public/copy-uuid": "1.1.5",
     "@kong-ui-public/document-viewer": "2.0.16",
-    "@kong-ui-public/spec-renderer": "^2.0.57-pr.1168.e2febd6b.0",
+    "@kong-ui-public/spec-renderer": "2.0.57-pr.1168.e2febd6b.0",
     "@kong/kong-auth-elements": "2.11.1",
     "@kong/kongponents": "8.127.0",
     "@kong/sdk-portal-js": "2.9.0",
@@ -39,7 +39,6 @@
     "date-fns": "3.3.0",
     "dotenv": "16.4.1",
     "js-yaml": "4.1.0",
-    "lefthook": "^1.6.5",
     "pinia": "2.1.3",
     "vue": "3.4.21",
     "vue-router": "4.3.0",
@@ -75,6 +74,7 @@
     "eslint-plugin-standard": "5.0.0",
     "eslint-plugin-vue": "9.22.0",
     "express": "4.18.2",
+    "lefthook": "^1.6.5",
     "openapi-types": "12.1.3",
     "rollup-plugin-visualizer": "5.12.0",
     "sass": "1.71.1",
