--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "eslint-plugin-standard": "5.0.0",
     "eslint-plugin-vue": "9.22.0",
     "express": "4.18.2",
-    "lefthook": "^1.6.5",
+    "lefthook": "1.6.1",
     "openapi-types": "12.1.3",
     "rollup-plugin-visualizer": "5.12.0",
     "sass": "1.71.1",
