--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
   },
   "dependencies": {
     "@kong-ui-public/analytics-chart": "0.15.2",
+    "@kong-ui-public/analytics-config-store": "0.4.2",
     "@kong-ui-public/analytics-metric-provider": "1.2.9",
     "@kong-ui-public/analytics-utilities": "0.10.1",
     "@kong-ui-public/copy-uuid": "1.3.12",
     "@kong-ui-public/document-viewer": "2.0.50",
+    "@kong-ui-public/portal-analytics-bridge": "0.1.0",
     "@kong-ui-public/spec-renderer": "2.1.23",
     "@kong/kong-auth-elements": "2.12.1",
     "@kong/kongponents": "8.127.0",
-    "@kong/sdk-portal-js": "2.10.0",
+    "@kong/sdk-portal-js": "2.11.1",
     "@xstate/vue": "2.0.0",
     "axios": "1.6.7",
     "date-fns": "3.3.0",
