--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@kong-ui-public/document-viewer": "2.0.50",
     "@kong-ui-public/portal-analytics-bridge": "0.1.0",
     "@kong-ui-public/spec-renderer": "2.1.23",
-    "@kong/kong-auth-elements": "2.12.1",
+    "@kong/kong-auth-elements": "^2.12.5",
     "@kong/kongponents": "8.127.0",
     "@kong/sdk-portal-js": "2.11.1",
     "@xstate/vue": "2.0.0",
