--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@kong-ui-public/spec-renderer": "2.1.23",
     "@kong/kong-auth-elements": "2.12.6",
     "@kong/kongponents": "8.127.0",
+    "@kong/markdown": "^1.7.8",
     "@kong/sdk-portal-js": "2.14.0",
     "@xstate/vue": "2.0.0",
+    "add": "^2.0.6",
     "axios": "1.6.7",
     "date-fns": "3.3.0",
     "dotenv": "16.4.5",
@@ -44,7 +46,8 @@
     "pinia": "2.1.3",
     "vue": "3.4.21",
     "vue-router": "4.3.0",
-    "xstate": "4.38.3"
+    "xstate": "4.38.3",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@commitlint/cli": "18.6.1",
