--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@kong-ui-public/spec-renderer": "2.2.20",
     "@kong/kong-auth-elements": "2.12.6",
     "@kong/kongponents": "8.127.0",
+    "@kong/markdown": "1.7.8",
     "@kong/sdk-portal-js": "2.14.0",
     "@xstate/vue": "2.0.0",
     "axios": "1.6.7",
