--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@kong/kong-auth-elements": "2.12.6",
     "@kong/kongponents": "8.127.0",
     "@kong/markdown": "1.7.8",
-    "@kong/sdk-portal-js": "2.14.0",
+    "@kong/sdk-portal-js": "2.15.4",
+    "@unhead/vue": "1.11.6",
     "@xstate/vue": "2.0.0",
     "axios": "1.6.7",
     "date-fns": "3.3.0",
