--- a/.github/workflows/sast.yaml
+++ b/.github/workflows/sast.yaml
@@ -3,7 +3,7 @@ name: Semgrep
 on:
   pull_request: {}
   push:
-    branches: 
+    branches:
     - master
     - main
   workflow_dispatch: {}
@@ -23,7 +23,7 @@ jobs:
     if: (github.actor != 'dependabot[bot]')
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: Kong/public-shared-actions/security-actions/semgrep@main
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
+      - uses: Kong/public-shared-actions/security-actions/semgrep@a18abf762d6e2444bcbfd20de70451ea1e3bc1b1
         with:
           additional_config: '--config p/rust'
