--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "yarn dev",
     "dev": "vite",
-    "serve": "vite preview",
+    "serve": "cross-env PREVIEW_LOCAL=true yarn build && vite preview",
     "build": "vite build --mode production",
     "build:analyze": "BUILD_VISUALIZER=true vite build --mode production",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore src",
@@ -22,66 +22,71 @@
     "semantic-release": "semantic-release"
   },
   "optionalDependencies": {
-    "launchdarkly-js-client-sdk": "3.1.3"
+    "launchdarkly-js-client-sdk": "3.2.0"
   },
   "dependencies": {
-    "@kong-ui-public/analytics-chart": "0.8.31",
-    "@kong-ui-public/analytics-metric-provider": "1.1.22",
-    "@kong-ui-public/analytics-utilities": "0.7.1",
-    "@kong-ui-public/copy-uuid": "1.1.5",
-    "@kong-ui-public/document-viewer": "0.10.5",
-    "@kong-ui-public/spec-renderer": "0.13.1",
-    "@kong/kong-auth-elements": "2.8.0",
-    "@kong/kongponents": "8.126.1",
-    "@kong/sdk-portal-js": "2.3.6",
+    "@kong-ui-public/analytics-chart": "0.15.2",
+    "@kong-ui-public/analytics-config-store": "0.4.2",
+    "@kong-ui-public/analytics-metric-provider": "1.2.9",
+    "@kong-ui-public/analytics-utilities": "0.10.1",
+    "@kong-ui-public/copy-uuid": "1.3.12",
+    "@kong-ui-public/document-viewer": "2.0.50",
+    "@kong-ui-public/portal-analytics-bridge": "0.1.0",
+    "@kong-ui-public/spec-renderer": "2.3.0",
+    "@kong/kong-auth-elements": "2.12.6",
+    "@kong/kongponents": "8.127.0",
+    "@kong/markdown": "1.7.8",
+    "@kong/sdk-portal-js": "2.16.0",
+    "@unhead/vue": "1.11.6",
     "@xstate/vue": "2.0.0",
-    "axios": "1.6.0",
-    "date-fns": "2.30.0",
-    "dotenv": "16.3.1",
+    "axios": "1.6.7",
+    "date-fns": "3.3.0",
+    "dotenv": "16.4.5",
     "js-yaml": "4.1.0",
     "pinia": "2.1.3",
-    "vue": "3.3.4",
-    "vue-router": "4.2.1",
-    "xstate": "4.38.0"
+    "vue": "3.4.21",
+    "vue-router": "4.3.0",
+    "xstate": "4.38.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "18.2.0",
-    "@commitlint/config-conventional": "18.1.0",
+    "@commitlint/cli": "18.6.1",
+    "@commitlint/config-conventional": "18.6.3",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "@vitejs/plugin-vue": "4.4.0",
-    "@vitejs/plugin-vue-jsx": "3.0.1",
-    "@vue/compiler-sfc": "3.3.4",
+    "@vitejs/plugin-vue": "5.0.4",
+    "@vitejs/plugin-vue-jsx": "3.1.0",
+    "@vue/compiler-sfc": "3.4.21",
     "@vue/eslint-config-standard": "8.0.1",
     "@vue/eslint-config-typescript": "12.0.0",
     "autoprefixer": "10.4.14",
     "commitizen": "4.3.0",
     "concurrently": "8.2.0",
-    "cypress": "13.4.0",
-    "cypress-split": "1.15.4",
-    "cypress-terminal-report": "5.3.2",
+    "cross-env": "7.0.3",
+    "cypress": "13.7.3",
+    "cypress-split": "1.20.1",
+    "cypress-terminal-report": "6.0.1",
     "cz-conventional-changelog": "3.3.0",
     "druid.d.ts": "0.12.2",
-    "eslint": "8.53.0",
-    "eslint-plugin-cypress": "2.15.1",
-    "eslint-plugin-import": "2.29.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-cypress": "2.15.2",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-portal-vue": "file:./eslint-plugin-portal-vue",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-standard": "5.0.0",
-    "eslint-plugin-vue": "9.18.1",
-    "express": "4.18.2",
-    "lefthook": "1.5.0",
+    "eslint-plugin-vue": "9.26.0",
+    "express": "4.19.2",
+    "lefthook": "1.6.13",
     "openapi-types": "12.1.3",
-    "rollup-plugin-visualizer": "5.9.2",
-    "sass": "1.69.0",
-    "semantic-release": "22.0.5",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.2.2",
-    "vite": "4.5",
-    "vite-svg-loader": "4.0.0",
+    "rollup-plugin-visualizer": "5.12.0",
+    "sass": "1.74.1",
+    "semantic-release": "22.0.12",
+    "tailwindcss": "3.4.0",
+    "typescript": "5.4.4",
+    "vite": "5.1",
+    "vite-svg-loader": "5.1.0",
     "vue-tsc": "1.8.4"
   },
   "config": {
