--- a/package.json
+++ b/package.json
@@ -101,11 +101,11 @@
   ],
   "engines": {
     "npm": "please-use-yarn",
-    "node": ">=18.17.1 < 19",
+    "node": ">=20.0.0",
     "yarn": ">=1.22.19"
   },
   "volta": {
-    "node": "18.17.1",
+    "node": "20.18.1",
     "yarn": "1.22.19"
   },
   "repository": {
